fix wrap

--- a/src/css/your-order.css
+++ b/src/css/your-order.css
@@ -9,13 +9,13 @@
   margin-bottom: 29px;
   opacity: 0;
   transition: all 500ms;
-  transform: translateX(50px);
+  transform: translateX(-100px);
 }
 
 .order-title.element-show {
   opacity: 1;
   transition: all 1s;
-  transform: translateX(0%);
+  transform: translateY(0%);
 }
 
 .order-title span {
@@ -26,13 +26,13 @@
   margin-bottom: 40px;
   opacity: 0;
   transition: all 500ms;
-  transform: translateX(50px);
+  transform: translateX(-100px);
 }
 
 .order-text.element-show {
   opacity: 1;
   transition: all 1s;
-  transform: translateX(0%);
+  transform: translateY(0%);
 }
 
 .order-blok-form {
